--- a/lab 1/index.html
+++ b/lab 1/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
 <h1>Welcome to Laboratory 1</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p>Maecenas ac leo nec magna feugiat viverra. Aliquam erat volutpat. Curabitur pellentesque tempor orci a faucibus. Aenean quis mauris nulla. Donec luctus vehicula imperdiet. Suspendisse nulla lectus, ornare vel ornare vitae, efficitur commodo lacus. Cras a scelerisque lorem, non posuere lectus.</p>
 </body>
 </html>
