--- a/lab 2/friends.html
+++ b/lab 2/friends.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Home</title>
+<title>Friends</title>
 <style>
     img {
         border: 5px solid #000; /* Хүрээ, өнгө нь хар */
@@ -54,23 +54,23 @@
 <table border="1" width="100%" height="720px">
 <tr height="10%">
     <td colspan="3">
-        <h1>Тавтай морил</h1>
+        <h1>Тавтай морилно уу, Миний найзуудтай танилцацгаая</h1>
     </td>
 </tr>
 <tr>
     <td width="20%">
+        <p><button><a href="index.html">BACK TO HOME PAGE</a></button></p>
         <p>OTHER PAGES :</p>
         <p><button><a href="about.html">ABOUT ME</a></button></p>
         <p><button><a href="family.html">ABOUT MY FAMILY</a></button></p>
-        <p><button><a href="friends.html">ABOUT MY FRIENDS</a></button></p>
         <p><button><a href="contact.html">CONTACT ME</a></button></p>
     </td>
     <td>
-        <img src="bi.jpg" alt="Зураг" width="300px">
-        <img src="bi1.jpg" alt="Зураг" width="300px">
+        <img src="naizuud1.jpg" alt="Зураг" width="300px">
+        <img src="naizuud2.jpg" alt="Зураг" width="300px">
     </td>
     <td rowspan="2" width="20%">
-        <p>Энэ бол би</p>
+        <p>Миний хамгийн сайн найзууд</p>
     </td>
 </tr>
 <tr height="20%">
