--- a/lab 5/index.html
+++ b/lab 5/index.html
@@ -191,7 +191,9 @@
 }
 .lame-btn {
     color: #2ad392;
-    border: 1px #2ad392;
+    border: 2px solid #2ad392;
+    background: white;
+
 }
 .vote-btn:not(:last-child) {
     margin-right: 5px;
