--- a/lab 5/index.html
+++ b/lab 5/index.html
@@ -222,13 +222,13 @@
             <p style="font-size: 12px"> The cupcake is really sweet, it's caramels, halvah, soufflé, sugar plum. Fruitcake lollipop tiramisu pastry halvah sweet lemon drops.Jelly beans marshmallow jujubes. Pudding macaroon chocolate cake chupa chups. Tootsie roll wafer jelly beans cotton candy jelly. Liquorice chocolate cake tart jelly. Chocolate pastry liquorice cupcake chocolate.</p>
             <iframe class="video" src="https://www.youtube.com/embed/NzTEZgFEr9k" title="What&#39;s Your ENGLISH LEVEL? Take This Test!" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <div class="alert">
-                <span style="background: white ; color: #9090a5; padding: 1px 4px; border-radius: 50%;">!</span> Whoa! This is a super important alert!
+                <span style="background: white ; color: #9090a5; padding: 0.5px 4px; border-radius: 50%;">!</span> Whoa! This is a super important alert!
             </div>
         </div>
     </div>
 	<div id="content">
     <div id="sidebar">
-        <div class="column1" style="background-color:#f61067; height: 10px; text-align: center; ">MESSAGES <span style="background: #352ba5; color: white; padding: 2px 5px; border-radius: 50%;">3</span></div>
+        <div class="column1" style="background-color:#f61067; height: 10px; text-align: center; "><img src="letter.png" width="12px" height="9px"> MESSAGES <span style="background: #352ba5; color: white; padding: 2px 5px; border-radius: 50%;">3</span></div>
         <div class="column1" style="background-color:#9090a5; height: 15px; font-weight: bold; font-size: 15px;"> Welcome Candidate!</div>
         <div class="column2" style="background-color:#13124f; height: 95px; font-weight: bold; font-size: 13px;">You are a Starfleet Academy Candidate. Greet the Captain in a <i>respectful</i>fashion.
             <div class="input-box">Input your greeting...</div>
