--- a/lab 6/demo-new.html
+++ b/lab 6/demo-new.html
@@ -7,6 +7,11 @@
   <meta name="description" content="An impressive and flawless site template that includes various UI elements and countless features, attractive ready-made blocks and rich pages, basically everything you need to create a unique and professional website.">
   <meta name="keywords" content="business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup, html5 template, site template">
   <meta name="author" content="elemis">
+  <meta property="og:title" content="Demo Test - Bootstrap 5 Site Template">
+  <meta property="og:description" content="Professional template with multipurpose features.">
+  <meta property="og:image" content="https://nasookk.github.io/Nasookk/lab7/assets/img/logo-dark.png">
+  <meta property="og:type" content="website">
+  <meta name="twitter:card" content="summary_large_image">
   <title>Demo Test - Modern & Multipurpose Bootstrap 5 Template</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/style.css">
@@ -25,10 +30,10 @@
               </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
-              <div class="offcanvas-header d-lg-none">
+              <!-- <div class="offcanvas-header d-lg-none">
                 <h3 class="text-white fs-30 mb-0">Demo Test</h3>
                 <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-              </div>
+              </div> -->
               <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
                 <ul class="navbar-nav">
                   <li class="nav-item dropdown dropdown-mega">
@@ -51,7 +56,7 @@
                   </li>
                 </ul>
                 <!-- /.navbar-nav -->
-                <div class="offcanvas-footer d-lg-none">
+                <!-- <div class="offcanvas-footer d-lg-none">
                   <div>
                     <a href="mailto:first.last@email.com" class="link-inverse">info@email.com</a>
                     <br /> 00 (123) 456 78 90 <br />
@@ -62,15 +67,15 @@
                       <a href="#"><i class="uil uil-instagram"></i></a>
                       <a href="#"><i class="uil uil-youtube"></i></a>
                     </nav>
-                    <!-- /.social -->
+                    /.social 
                   </div>
-                </div>
+                </div> -->
                 <!-- /.offcanvas-footer -->
               </div>
               <!-- /.offcanvas-body -->
             </div>
             <!-- /.navbar-collapse -->
-            <div class="navbar-other w-100 d-flex ms-auto">
+             <div class="navbar-other w-100 d-flex ms-auto">
               <ul class="navbar-nav flex-row align-items-center ms-auto">
                 <li class="nav-item">
                   <nav class="nav social social-muted justify-content-end text-end">
@@ -79,14 +84,14 @@
                     <a href="#"><i class="uil uil-dribbble"></i></a>
                     <a href="#"><i class="uil uil-instagram"></i></a>
                   </nav>
-                  <!-- /.social -->
+                
                 </li>
-                <li class="nav-item d-lg-none">
+                <!-- <li class="nav-item d-lg-none">
                   <button class="hamburger offcanvas-nav-btn"><span></span></button>
                 </li>
-              </ul>
-              <!-- /.navbar-nav -->
-            </div>
+              </ul> -->
+               <!-- /.navbar-nav  -->
+            </div> 
             <!-- /.navbar-other -->
           </div>
           <!-- /.navbar-collapse-wrapper -->
