--- a/lab 6/demo-new.html
+++ b/lab 6/demo-new.html
@@ -4,20 +4,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="An impressive and flawless site template that includes various UI elements and countless features, attractive ready-made blocks and rich pages, basically everything you need to create a unique and professional website.">
+  <meta name="description" content="Modern multipurpose Bootstrap 5 site template with ready-made blocks, UI elements, and professional design.">
   <meta name="keywords" content="business, corporate, creative, gulp, marketing, minimal, modern, multipurpose, one page, responsive, saas, sass, seo, startup, html5 template, site template">
-  <meta name="author" content="elemis">
+  <meta name="author" content="ssophith demo-test">
   <meta property="og:title" content="Demo Test - Bootstrap 5 Site Template">
   <meta property="og:description" content="Professional template with multipurpose features.">
-  <meta property="og:image" content="https://nasookk.github.io/Nasookk/lab7/assets/img/logo-dark.png">
+  <meta property="og:image" content="https://ssophith.github.io/ssophith/lab6/assets/img/logo-dark.png">
   <meta property="og:type" content="website">
-  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="demo-test">
+  <meta name="twitter:title" content="ssophith.github.io">
+  <meta name="twitter:description" content="Professional Bootstrap 5 site template with modern design, responsive layout, and SEO-ready features for startups and businesses.">
+  <meta name="twitter:creator" content="ssophith">
   <title>Demo Test - Modern & Multipurpose Bootstrap 5 Template</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <link href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" rel="stylesheet">
+  <link href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" rel="stylesheet">   
 </head>
-
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Your Company",
+    "url": "https://yourdomain.com",
+    "logo": "https://yourdomain.com/assets/img/logo.png",
+    "sameAs": [
+      "https://www.facebook.com/yourpage",
+      "https://twitter.com/yourhandle"
+    ]
+  }
+</script> 
 <body>
   <div class="content-wrapper">
     <header class="wrapper bg-gray">
@@ -26,7 +42,7 @@
           <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
             <div class="navbar-brand w-100">
               <a href="./index.html">
-                <img src="./assets/img/logo-dark.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="" />
+                <img src="./assets/img/logo-dark.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="Company logo - Demo Test site" />
               </a>
             </div>
             <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
@@ -117,7 +133,7 @@
         <!-- /.row -->
       </div>
       <!-- /.container -->
-      <figure class="position-absoute" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/bg11.jpg" alt="" /></figure>
+      <figure class="position-absoute" style="bottom: 0; left: 0; z-index: 2;"><img src="./assets/img/photos/bg11.jpg" alt="Our professional team providing tech solutions" /></figure>
     </section>
     <!-- /section -->
     <section class="wrapper bg-gray">
@@ -295,7 +311,7 @@
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
                     <article>
-                      <figure class="overlay overlay-1 hover-scale rounded mb-6"><a href="#"> <img src="./assets/img/photos/b4.jpg" alt="" /></a>
+                      <figure class="overlay overlay-1 hover-scale rounded mb-6"><a href="#"> <img src="./assets/img/photos/b4.jpg" alt="Elegant layout with clean and modern design" /></a>
                         <figcaption>
                           <h5 class="from-top mb-0">Read More</h5>
                         </figcaption>
@@ -318,7 +334,7 @@
                   <!--/.swiper-slide -->
                   <div class="swiper-slide">
                     <article>
-                      <figure class="overlay overlay-1 hover-scale rounded mb-6"><a href="#"> <img src="./assets/img/photos/b5.jpg" alt="" /></a>
+                      <figure class="overlay overlay-1 hover-scale rounded mb-6"><a href="#"> <img src="./assets/img/photos/b5.jpg" alt="Innovative business team discussing project strategy" /></a>
                         <figcaption>
                           <h5 class="from-top mb-0">Read More</h5>
                         </figcaption>
@@ -341,7 +357,7 @@
                   <!--/.swiper-slide -->
                   <div class="swiper-slide">
                     <article>
-                      <figure class="overlay overlay-1 hover-scale rounded mb-6"><a href="#"> <img src="./assets/img/photos/b6.jpg" alt="" /></a>
+                      <figure class="overlay overlay-1 hover-scale rounded mb-6"><a href="#"> <img src="./assets/img/photos/b6.jpg" alt="Responsive multipurpose Bootstrap website interface" /></a>
                         <figcaption>
                           <h5 class="from-top mb-0">Read More</h5>
                         </figcaption>
@@ -394,7 +410,7 @@
             <div class="row gx-lg-8 gx-xl-12 gy-10 mb-14 mb-md-17 align-items-center">
               <!--/column -->
               <div class="col-md-8 col-lg-6 order-lg-2">
-                <figure class="rounded"><img src="./assets/img/photos/about24.jpg" srcset="./assets/img/photos/about24@2x.jpg 2x" alt=""></figure>
+                <figure class="rounded"><img src="./assets/img/photos/about24.jpg" srcset="./assets/img/photos/about24@2x.jpg 2x" alt="Our professional team"></figure>
               </div>
               <div class="col-lg-6">
                 <h2 class="fs-15 text-uppercase text-muted mb-3">Our Team</h2>
@@ -423,7 +439,7 @@
             <!--/.row -->
             <div class="row gy-10 gx-lg-8 gx-xl-12 mb-14 mb-md-16 align-items-center">
               <div class="col-md-8 col-lg-6">
-                <figure class="rounded"><img src="./assets/img/photos/about25.jpg" srcset="./assets/img/photos/about25@2x.jpg 2x" alt=""></figure>
+                <figure class="rounded"><img src="./assets/img/photos/about25.jpg" srcset="./assets/img/photos/about25@2x.jpg 2x" alt="professional design, Supportive, Multiple options"></figure>
               </div>
               <!--/column -->
               <div class="col-lg-6">
