--- a/lab 6/demo-new.html
+++ b/lab 6/demo-new.html
@@ -21,19 +21,52 @@
   <link rel="stylesheet" href="./assets/css/style.css">
   <link href="https://unicons.iconscout.com/release/v4.0.8/css/line.css" rel="stylesheet">   
 </head>
+<!-- Canonical URL -->
+<link rel="canonical" href="https://yourdomain.com/">
+
+<!-- Robots Meta -->
+<meta name="robots" content="index, follow">
+
+<!-- Keywords (optional, хуучны боловч зарим тохиолдолд нэмэртэй) -->
+<meta name="keywords" content="bootstrap template, responsive design, HTML5, CSS3, modern UI, SEO friendly, multipurpose website, startup landing page">
+
+<!-- Theme Color (mobile optimization) -->
+<meta name="theme-color" content="#ffffff">
+
+<!-- Structured Data: WebSite -->
 <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Organization",
-    "name": "Your Company",
-    "url": "https://yourdomain.com",
-    "logo": "https://yourdomain.com/assets/img/logo.png",
-    "sameAs": [
-      "https://www.facebook.com/yourpage",
-      "https://twitter.com/yourhandle"
-    ]
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Demo Test",
+  "url": "https://yourdomain.com",
+  "potentialAction": {
+    "@type": "SearchAction",
+    "target": "https://yourdomain.com/search?q={search_term_string}",
+    "query-input": "required name=search_term_string"
   }
-</script> 
+}
+</script>
+
+<!-- Structured Data: Local Business (хэрэв та бизнес сайттай бол) -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "LocalBusiness",
+  "name": "Your Company",
+  "image": "https://yourdomain.com/assets/img/logo.png",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Your Street 123",
+    "addressLocality": "City",
+    "addressRegion": "State",
+    "postalCode": "12345",
+    "addressCountry": "Country"
+  },
+  "telephone": "+1234567890",
+  "url": "https://yourdomain.com"
+}
+</script>
 <body>
   <div class="content-wrapper">
     <header class="wrapper bg-gray">
