--- a/lab 8/index.html
+++ b/lab 8/index.html
@@ -115,7 +115,7 @@
   <div class="task">
     <p>Петя найзтайгаа дараах тоглоомыг тоглож байв. Ширээн дээр n ширхэг зоос байв. Петя эхлээд к тооны зоос авна. Найз нь к+1-ээс хэтрэхгүй тооны зоос авна. Хамгийн сүүлийн зоосыг авсан нь хожигдоно. Петя зайлшгүй хожихийн тулд хамгийн түрүүнд хэдэн зоос авах шаардлагатай вэ? Хожих боломжгүй бол 0 гэсэн утга гарга.</p>
     <label>Нийт зоос (n):</label>
-    <input type="number" id="coinN">
+    <input type="number" id="coins">
     <button onclick="findBestK()">Шалгах</button>
     <div id="gameResult"></div>
   </div>
@@ -214,47 +214,25 @@
     ` ${entrance}-р орц, ${floor}-р давхар, ${door}-р хаалга`;
   }
 
+
   function findBestK() {
-  const n = parseInt(document.getElementById("coinN").value);
-  let bestK = 0;
+      const n = parseInt(document.getElementById('coins').value);
+      const resultDiv = document.getElementById('gameResult');
 
-  for (let k = 1; k <= n; k++) {
-    if (canPetyaWin(n, k)) {
-      bestK = k;
-      break;
-    }
-  }
-
-  const result = document.getElementById("gameResult");
-  if (bestK > 0) {
-    result.innerHTML = `Петя <strong>${bestK}</strong> ширхэг зоос авбал заавал хожно.`;
-  } else {
-    result.innerHTML = `Петя ямар ч тохиолдолд хожих боломжгүй байна.`;
-  }
-}
-
-function canPetyaWin(n, k) {
-  const memo = {};
-
-  function isWinning(left, prevMove) {
-    const key = `${left},${prevMove}`;
-    if (key in memo) return memo[key];
-
-    if (left <= 0) return false; // Сүүлийн зоос авсан → хожигдсон
-
-    for (let take = 1; take <= prevMove + 1; take++) {
-      if (!isWinning(left - take, take)) {
-        memo[key] = true;
-        return true; // Дараагийн тоглогч хожигдох байрлалд хүрж байна
+      if (isNaN(n) || n < 2) {
+        resultDiv.textContent = "2 буюу түүнээс дээш зоосны тоо оруулна уу.";
+        return;
       }
+
+      for (let k = 1; k < n; k++) {
+        if ((n - k - 1) % (2 * k + 1) === 0) {
+          resultDiv.textContent = `k-ийн утга: ${k}`;
+          return;
+        }
+      }
+
+      resultDiv.textContent = `Боломжгүй (n = ${n}).`;
     }
-
-    memo[key] = false;
-    return false; // Ямар ч хожих боломжгүй
-  }
-
-  return isWinning(n - k, k);
-}
 
   function showTimeBasedSquare() {
     const now = new Date();
