--- a/lab 8/index.html
+++ b/lab 8/index.html
@@ -226,7 +226,7 @@
 
       for (let k = 1; k < n; k++) {
         if ((n - k - 1) % (2 * k + 1) === 0) {
-          resultDiv.textContent = `k-ийн утга: ${k}`;
+          resultDiv.textContent = `Пэтя ${k} зоос авбал хожино`;
           return;
         }
       }
