--- a/lab 8/index.html
+++ b/lab 8/index.html
@@ -21,7 +21,7 @@
     #shape {
       width: 50px;
       height: 50px;
-      position: absolute; /* 📌 Fixed биш боллоо */
+      position: absolute; 
       bottom: 10px;
       right: 10px;
       border-radius: 8px;
