--- a/lab 9/index.html
+++ b/lab 9/index.html
@@ -4,15 +4,16 @@
 <meta charset="UTF-8">
 <title>Валютын ханш хөрвүүлэгч</title>
 <style>
-    body {
+    #body {
         font-family: Arial;
         max-width: 400px;
         margin: 30px auto;
         text-align: center;
+        color: white;
         padding: 20px;
-        border: 2px solid #ccc;
+        border: 1px solid rgb(46, 87, 128);
         border-radius: 12px;
-        box-shadow: 0 0 10px rgba(0,0,0,0.1);
+        box-shadow: 0 0 30px rgba(0,0,0,0.1);
     }
     input {
         width: 92%;
@@ -71,7 +72,7 @@
         font-size: 16px;
     }
     button#convertBtn {
-        width: 100%;
+        width: 97.7%;
         background-color: #4CAF50;
         color: white;
         font-size: 20px;
@@ -80,11 +81,12 @@
     #result {
         margin-top: 15px;
         font-size: 22px;
-        color: #333;
+        color: white;
     }
   </style>
 </head>
 <body>
+<div id="body" style="width: 100%; height: 100%; background-image: url('background.jpg'); background-size: cover; background-position: center;">
     <h2>Валют хөрвүүлэгч</h2>
 
     <input type="text" id="amountInput" readonly placeholder="Дүн оруулна уу">
@@ -166,5 +168,6 @@
         document.getElementById("result").innerText = `Үр дүн: ${converted.toFixed(2)}`;
     }
   </script>
+</div>
 </body>
 </html>
